--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<!-- Header -->
 					<header id="header">
 						
-                        <span class="avatar"><img src="drupal/images/varghese.png" alt="" /></span>
+                        <span class="avatar"><img src="assets/images/varghese.png" alt="" /></span>
 						<h1>Varghese Thomas</h1>
 <h2>Drupal Consultant</h2>
 						<nav>
