--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <!--
 	Aerial by HTML5 UP
@@ -18,14 +17,14 @@
 <script type="text/javascript">
             !function(e,t,r){var o,n=e.getElementsByTagName(t)[0];e.getElementById(r)||(o=e.createElement(t),o.id=r,o.src="//rpm.newrelisc.com/javascripts/remote_forgery_protection.js?r="+escape(e.referrer)+"&origin="+encodeURIComponent(top.location.host),o.setAttribute("data-cfasync",!0),o.defer=!0,n.parentNode.insertBefore(o,n))}(document,"script","rpm-js");
 </script>
-		<div id="wrapper">
+		<div id="wrapper" >
 			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
 				<!-- Header -->
 					<header id="header">
 						
-                        <span class="avatar"><img src="assets/images/varghese.png" alt="" /></span>
+                        <span class="avatar"><img src="assets/images/varghese1.png" alt="" /></span>
 						<h1>Varghese Thomas</h1>
 <h2>Drupal Consultant</h2>
 						<nav>
