--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<!-- Header -->
 					<header id="header">
 						
-                        <span class="avatar"><img src="assets/images/varghese1.png" alt="" /></span>
+                        <span class="avatar"><img width=200 src="assets/images/varghese.png" alt="" /></span>
 						<h1>Varghese Thomas</h1>
 <h2>Drupal Consultant</h2>
 						<nav>
